--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ansible
           ansible --version
+      - name: Run Ansible playbook
+        run: |
+          cd ansible_directory
+          ansible-playbook -i ../terraform_directory/ansible_inventory.ini install_docker_and_k8s.yml
