--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,11 @@ jobs:
           ansible --version
       - name: View available hosts
         run: |
-          cat /terraform_directory/ansible_inventory.ini
+          ls
+          cd terraform_directory/ 
+          ls
+          cat ansible_inventory.ini
 
       - name: Run Ansible playbook
         run: |
-          ansible-playbook -i /terraform_directory/ansible_inventory.ini install_docker_and_k8s.yml
+          ansible-playbook -i terraform_directory/ansible_inventory.ini install_docker_and_k8s.yml
