--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       
         run: |
           mkdir -p ~/.ssh/
-          echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo " ${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
           unset PRIVATE_KEY
           chmod 600 ~/.ssh/id_rsa
 
