--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 inventory = /terraform_directory/ansible_inventory.ini
 enable_plugins = aws_ec2
+ANSIBLE_PRIVATE_KEY_FILE=/home/igorcr/.ssh/id_rsa
