--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,17 @@ jobs:
         run: |
           cat terraform_directory/ansible_inventory.ini
 
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
+          unset PRIVATE_KEY
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H terraform_directory/ansible_inventory.ini >> ~/.ssh/known_hosts
+
       - name: Run Ansible playbook
       
         run: |
-          mkdir -p ~/.ssh/
-          echo " ${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          unset PRIVATE_KEY
-          chmod 600 ~/.ssh/id_rsa
-
           ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/all.yml --tags "tag_name_k8s" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
           ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/master.yml --tags "tag_type_master" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
           ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/worker.yml --tags "tag_type_worker" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
