--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,9 @@ jobs:
 
           cat ~/.ssh/id_rsa
 
+          cd .ssh/ 
+          ls
+
       - name: Run Ansible playbook
       
         run: |
