--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,66 +3,95 @@ name: AWS Terraform and Ansible Pipeline
 on:
   push:
     branches:
-      - master  # ajuste conforme sua branch principal
+      - master
 
 jobs:
-  deploy:
+  terraform:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Install AWS CLI
+      - name: Run Terraform Commands
         run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
-          aws --version
+          docker run --rm \
+            -v $(pwd):/workspace \
+            -w /workspace \
+            mateusmuller2/ansibleandterraform:latest \
+            terraform init
+          docker run --rm \
+            -v $(pwd):/workspace \
+            -w /workspace \
+            mateusmuller2/ansibleandterraform:latest \
+            terraform apply -auto-approve
 
-      - name: Configure AWS credentials
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
-
-      - name: Terraform Init
-        run: |
-          cd terraform_directory
-          terraform init
-
-      - name: Terraform Apply
-        run: |
-          cd terraform_directory
-          terraform apply -auto-approve
-
-      - name: Install Ansible
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ansible
-          ansible --version
-      - name: View available hosts
-        run: |
-          cat terraform_directory/ansible_inventory.ini
-
-      - name: Configure SSH
-        run: |
-          mkdir -p /.ssh/
-
-          ls -la /.ssh/
-
-          echo "$PRIVATE_KEY" > /.ssh/id_rsa
-          unset PRIVATE_KEY
-          chmod 600 /.ssh/id_rsa
-
-          cat /.ssh/id_rsa
-
-          cd .ssh/ 
-          ls
-
-      - name: Run Ansible playbook
-      
-        run: |
-          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/all.yml --tags "tag_name_k8s" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
-          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/master.yml --tags "tag_type_master" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
-          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/worker.yml --tags "tag_type_worker" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
-
+#name: AWS Terraform and Ansible Pipeline
+#
+#on:
+#  push:
+#    branches:
+#      - master  # ajuste conforme sua branch principal
+#
+#jobs:
+#  deploy:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#
+#      - name: Install AWS CLI
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y awscli
+#          aws --version
+#
+#      - name: Configure AWS credentials
+#        run: |
+#          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
+#
+#      - name: Terraform Init
+#        run: |
+#          cd terraform_directory
+#          terraform init
+#
+#      - name: Terraform Apply
+#        run: |
+#          cd terraform_directory
+#          terraform apply -auto-approve
+#
+#      - name: Install Ansible
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y ansible
+#          ansible --version
+#      - name: View available hosts
+#        run: |
+#          cat terraform_directory/ansible_inventory.ini
+#
+#      - name: Configure SSH
+#        run: |
+#          mkdir -p /.ssh/
+#
+#          ls -la /.ssh/
+#
+#          echo "$PRIVATE_KEY" > /.ssh/id_rsa
+#          unset PRIVATE_KEY
+#          chmod 600 /.ssh/id_rsa
+#
+#          cat /.ssh/id_rsa
+#
+#          cd .ssh/ 
+#          ls
+#
+#      - name: Run Ansible playbook
+#      
+#        run: |
+#          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/all.yml --tags "tag_name_k8s" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
+#          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/master.yml --tags "tag_type_master" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
+#          ansible-playbook -i terraform_directory/ansible_inventory.ini playbook/worker.yml --tags "tag_type_worker" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/id_rsa
+#
+#
