--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,19 +12,36 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
-      - name: Run Terraform Commands
+        
+      - name: Configure SSH
         run: |
-          docker run --rm \
-            -v $(pwd):/workspace \
-            -w /workspace \
-            mateusmuller2/ansibleandterraform:latest \
-            terraform init
-          docker run --rm \
-            -v $(pwd):/workspace \
-            -w /workspace \
-            mateusmuller2/ansibleandterraform:latest \
-            terraform apply -auto-approve
+          mkdir -p /.ssh/
+
+          ls -la /.ssh/
+
+          echo "$PRIVATE_KEY" > /.ssh/id_rsa
+          unset PRIVATE_KEY
+          chmod 600 /.ssh/id_rsa
+
+          cat /.ssh/id_rsa
+
+          cd .ssh/ 
+          ls
+
+#      - name: Run Terraform Commands
+#        run: |
+#          ls 
+#          
+#          docker run --rm \
+#            -v $(pwd):/workspace \
+#            -w /workspace \
+#            mateusmuller2/ansibleandterraform:latest \
+#            terraform init
+#          docker run --rm \
+#            -v $(pwd):/workspace \
+#            -w /workspace \
+#            mateusmuller2/ansibleandterraform:latest \
+#            terraform apply -auto-approve
 
 #name: AWS Terraform and Ansible Pipeline
 #
