--- a/ansible/playbook/all.yml
+++ b/ansible/playbook/all.yml
@@ -2,5 +2,5 @@
   become: yes
   hosts: tag_name_k8s
   roles:
-    - ./roles/docker
-    - ./roles/k8s-all
+    - ./ansible/roles/docker
+    - ./ansible/roles/k8s-all
