--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run Ansible playbook
       
         run: |
-          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/all.yml --tags "tag_name_k8s" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/k8s-key
-          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/master.yml --tags "tag_type_master" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/k8s-key
-          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/worker.yml --tags "tag_type_worker" --ssh-common-args='-o StrictHostKeyChecking=no' --private-key ~/.ssh/k8s-key
+          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/all.yml --tags "tag_name_k8s" --private-key "$HOME/.ssh/k8s-key"
+          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/master.yml --tags "tag_type_master"  --private-key "$HOME/.ssh/k8s-key"
+          ansible-playbook -i terraform/ansible_inventory.ini ansible/playbook/worker.yml --tags "tag_type_worker" --private-key "$HOME/.ssh/k8s-key"
 
